# pandabuffers

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: python-app.yml
pandabuffers/: __init__.py  proto_to_pandas.py
tests/: test_pandabuffers.py
