[tool.poetry]
name = "pandabuffers"
version = "0.1.0"
description = "Convert protocol buffers to pandas dataframes"
authors = ["Kimberly Jones <mathjones42@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pandas = "^1.5.3"
protobuf = "^4.22.0"

[tool.poetry.dev-dependencies]
mypy = "^1.0.1"
black = "^23.1.0"
types-protobuf = "^4.21.0"
flake8 = "^6.0.0"
pytest = "^7.2.1"
pandas-stubs = "^1.5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
extend-exclude = '.*_pb2.py'
